refactoring3(html,sql in res;logs;lombok)